Fix alignment of info

--- a/resume.scss
+++ b/resume.scss
@@ -21,3 +21,6 @@ a {
 .fa-map-marker-alt {
   margin-right: 3px;
 }
+.link {
+  margin-left: 4px;
+}
